--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="#home">Início</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+    <div class="menu-toggle" id="menu-toggle">
+        &#9776; <!-- Ícone do menu -->
+    </div>
+    <ul id="nav-list">
+        <li><a href="#home">Início</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#produtos">Produtos</a></li>
+        <li><a href="#contato">Contato</a></li>
+    </ul>
+</nav>
+
 
         <section class="image-carousel">
             <h2 class="gallery-title">Nossos Serviços</h2> <!-- Título da seção -->
